Fix info box spacing for map in responsive node edit layout.

--- a/app/assets/stylesheets/relaunch/_nodes.css.scss
+++ b/app/assets/stylesheets/relaunch/_nodes.css.scss
@@ -710,6 +710,7 @@ $node-photos-width: (100% - $node-photos-gutter * $node-photos-columns) / $node-
   background: #D8D8D8 image-url("node-map-info.png") no-repeat 10px 10px;
   border: 1px solid #B7B7B7;
   padding: 8px 10px 8px 39px;
+  margin-bottom: 30px;
 
   &-tip-container {
     height: 11px;
